--- a/Amino-Acid-Composition-Summary.Rmd
+++ b/Amino-Acid-Composition-Summary.Rmd
@@ -6,41 +6,58 @@ output: html_document
   
 Load mySQL table info for genes
 ```{r}
-gene.data <- read.table("2017-06-20_EnsemblV73_MouseGenes.tab", sep="\t",header=T) 
-protein.data <- read.table("2017-06-20_EnsemblV73_MouseProteins.tab", sep="\t",header=T)
+gene.data <- read.table("InputFinal/EnsemblV73_MouseGenes.tab", sep="\t",header=T) 
+protein.data <- read.table("InputFinal/EnsemblV73_MouseProteins.tab", sep="\t",header=T)
+
+hydrophobicity.data <- read.table("InputFinal/EnsemblV73_MouseProteins_FILVMW_AAPercent.tab", sep="\t",header=T)
+scrambled.data <- read.table("InputFinal/FILVMW_2018ScrambledControls.tab",sep="\t",header=TRUE)
 
 APR.data <- merge(gene.data, protein.data, by.x="MouseGenesPrimaryKey", by.y="MouseGenesForeignKey")
+APR.data <- merge(APR.data, hydrophobicity.data[,c("MouseProteinsPrimaryKey","FILVMW_HydrophobicPercentageUsingDispersionAA")], by = "MouseProteinsPrimaryKey")
 remove(gene.data)
 remove(protein.data)
 ```
 
-Factorize gene family number and phylostratum
-```{r}
-APR.data$GeneFamilyNumber <- as.factor(APR.data$GeneFamilyNumber) #factorize gene family ID to prevent numeric interpretation by R
-APR.data$GeneFamilyPhylostratum <- as.factor(APR.data$GeneFamilyPhylostratum) #factorize variable to ensure that it is not interpreted as numeric variable
-APR.data$GeneFamilyPhylostratum <- with(APR.data, factor(GeneFamilyPhylostratum, levels = c(sort(unique(APR.data$GeneFamilyPhylostratum)),"Intergenic","Repeat-masked"))) # set levels of categorical phylostratum variable
-APR.data$ExcludedGeneBinary <- as.factor(APR.data$ExcludedGeneBinary) #factorize binary category for gene families with ambiguous age
-
-```
-
 Set phylostrata for intergenic controls
 ```{r}
-APR.data[which(APR.data$GeneOrControlDesignation == "IntergenicNucleotideSeqControl"),]$GeneFamilyPhylostratum <- "Intergenic" #Give intergenic sequence a categorical phylostratum for comparison
-APR.data[which(APR.data$GeneOrControlDesignation == "MaskedIntergenicNucleotideSeqControl"),]$GeneFamilyPhylostratum <- "Repeat-masked" #Give repeat-masked intergenic sequence a categorical phylostratum
+APR.data[which(APR.data$GeneOrControlDesignation == "IntergenicNucleotideSeqControl"),]$PS21_GeneFamilyPhylostratum <- "Intergenic" #Give intergenic sequence a categorical phylostratum for comparison
+APR.data[which(APR.data$GeneOrControlDesignation == "MaskedIntergenicNucleotideSeqControl"),]$PS21_GeneFamilyPhylostratum <- "Repeat-masked" #Give repeat-masked intergenic sequence a categorical phylostratum
+```
+
+```{r}
+APR.data[which(APR.data$EnsemlGeneUID=="ENSMUSG00000067543"),]$PS21_GeneFamilyNumber <- APR.data[which(APR.data$EnsemlGeneUID=="ENSMUSG00000052262"),]$PS21_GeneFamilyNumber #Fix gene family for two pahari genes
 
 ```
+
+Factorize gene family number and phylostratum
+```{r}
+APR.data$PS21_GeneFamilyNumber <- as.factor(APR.data$PS21_GeneFamilyNumber) #factorize gene family ID to prevent numeric interpretation by R
+APR.data$PS21_GeneFamilyPhylostratum <- as.factor(APR.data$PS21_GeneFamilyPhylostratum) #factorize variable to ensure that it is not interpreted as numeric variable
+APR.data$PS21_GeneFamilyPhylostratum <- with(APR.data, factor(PS21_GeneFamilyPhylostratum, levels = c(sort(unique(APR.data$PS21_GeneFamilyPhylostratum)),"Intergenic","Repeat-masked"))) # set levels of categorical phylostratum variable
+APR.data$PS21_ExcludedGeneBinary <- as.factor(APR.data$PS21_ExcludedGeneBinary) #factorize binary category for gene families with ambiguous age
+
+```
+
 
 Remove phylostratum 0 (unclassifiable), gene families with ambiguous age, genes without rat homologs, and ORFan proteins
 ```{r}
-APR.data <- APR.data[which(APR.data$GeneFamilyPhylostratum != "0" & APR.data$GeneFamilyPhylostratum != "20" & APR.data$ExcludedGeneBinary != "1" ),] #exclude unclassifiable genes, false-positive rich ORFans
+APR.data <- APR.data[which(APR.data$PS21_GeneFamilyPhylostratum != "0" & APR.data$PS21_GeneFamilyPhylostratum != "21" & APR.data$PS21_ExcludedGeneBinary != "1" ),] #exclude unclassifiable genes, false-positive rich ORFans
+paralogs.list <- c("ENSMUSG00000073631","ENSMUSG00000079800","ENSMUSG00000094728","ENSMUSG00000095240","ENSMUSG00000095366","ENSMUSG00000095450","ENSMUSG00000095787","ENSMUSG00000096100","ENSMUSG00000096850")
+APR.data <- APR.data[which(!(APR.data$EnsemblGeneUID %in% paralogs.list)),]#remove genes with known paralogy to other genes
 ```
 
 Trim data frame to only the information needed
 ```{r}
-genes <- APR.data[which(APR.data$GeneOrControlDesignation == "CodingGene"),c("EnsemblGeneUID","GeneFamilyNumber","GeneFamilyPhylostratum","TangoPentamerAAInAPRsDensity","MannigeHydrophobicityPercent","BoussauThermophilicPercent")] #subset out genes
-scrambled <- APR.data[which(APR.data$GeneOrControlDesignation == "ScrambledByAminoAcidControl"),c("EnsemblGeneUID","GeneFamilyNumber","GeneFamilyPhylostratum","TangoPentamerAAInAPRsDensity","MannigeHydrophobicityPercent","BoussauThermophilicPercent")] #subset out scrambled controls
-intergenic <- APR.data[which(APR.data$GeneOrControlDesignation == "IntergenicNucleotideSeqControl"),c("EnsemblGeneUID","GeneFamilyNumber","GeneFamilyPhylostratum","TangoPentamerAAInAPRsDensity","MannigeHydrophobicityPercent","BoussauThermophilicPercent")] #subset out intergenic
-masked <- APR.data[which(APR.data$GeneOrControlDesignation == "MaskedIntergenicNucleotideSeqControl"),c("EnsemblGeneUID","GeneFamilyNumber","GeneFamilyPhylostratum","TangoPentamerAAInAPRsDensity","MannigeHydrophobicityPercent","BoussauThermophilicPercent")] #subset out intergenic
+genes <- APR.data[which(APR.data$GeneOrControlDesignation == "CodingGene"),c("EnsemblGeneUID","PS21_GeneFamilyNumber","PS21_GeneFamilyPhylostratum","TangoPentamerAAInAPRsDensity","MannigeHydrophobicityPercent","BoussauThermophilicPercent","FILVMW_HydrophobicPercentageUsingDispersionAA")] #subset out genes
+scrambled <- APR.data[which(APR.data$GeneOrControlDesignation == "ScrambledByAminoAcidControl"),c("EnsemblGeneUID","PS21_GeneFamilyNumber","PS21_GeneFamilyPhylostratum","TangoPentamerAAInAPRsDensity","MannigeHydrophobicityPercent","BoussauThermophilicPercent","FILVMW_HydrophobicPercentageUsingDispersionAA")] #subset out scrambled controls
+intergenic <- APR.data[which(APR.data$GeneOrControlDesignation == "IntergenicNucleotideSeqControl"),c("EnsemblGeneUID","PS21_GeneFamilyNumber","PS21_GeneFamilyPhylostratum","TangoPentamerAAInAPRsDensity","MannigeHydrophobicityPercent","BoussauThermophilicPercent","FILVMW_HydrophobicPercentageUsingDispersionAA")] #subset out intergenic
+masked <- APR.data[which(APR.data$GeneOrControlDesignation == "MaskedIntergenicNucleotideSeqControl"),c("EnsemblGeneUID","PS21_GeneFamilyNumber","PS21_GeneFamilyPhylostratum","TangoPentamerAAInAPRsDensity","MannigeHydrophobicityPercent","BoussauThermophilicPercent","FILVMW_HydrophobicPercentageUsingDispersionAA")] #subset out intergenic
+
+scrambled.mean <- aggregate(scrambled.data$TangoPentamerAAInAPRsDensity, by = list(scrambled.data$EnsemblGeneUID), FUN = mean, data=scrambled.data)
+colnames(scrambled.mean) <- c("EnsemblGeneUID","ScrambledMeanAPR")
+
+scrambled <- merge(scrambled, scrambled.mean, by = "EnsemblGeneUID")
+
 remove(APR.data) #clear large data frame with unnecessary information
 ```
 
@@ -52,13 +69,17 @@ bcFit.TangoNumAA <- boxcoxfit(genes$TangoPentamerAAInAPRsDensity, lambda2 =  NUL
 lambda1.TangoNumAA <- unname(bcFit.TangoNumAA$lambda[1])
 lambda1.TangoNumAA
 
-bcFit.Oiliness <- boxcoxfit(genes$MannigeHydrophobicityPercent, lambda2 =  NULL) #Fit Box-Cox transform to each aggregation metric
+bcFit.Oiliness <- boxcoxfit(genes$MannigeHydrophobicityPercent, lambda2 =  NULL) #Fit Box-Cox transform to each metric
 lambda1.Oiliness <- unname(bcFit.Oiliness$lambda[1])
 lambda1.Oiliness
 
-bcFit.Thermo <- boxcoxfit(genes$BoussauThermophilicPercent, lambda2 =  NULL) #Fit Box-Cox transform to each aggregation metric
+bcFit.Thermo <- boxcoxfit(genes$BoussauThermophilicPercent, lambda2 =  NULL) #Fit Box-Cox transform to each metric
 lambda1.Thermo <- unname(bcFit.Thermo$lambda[1])
 lambda1.Thermo
+
+bcFit.Hydro <- boxcoxfit(genes$FILVMW_HydrophobicPercentageUsingDispersionAA, lambda2 =  NULL) #Fit Box-Cox transform to each metric
+lambda1.Hydro <- unname(bcFit.Hydro$lambda[1])
+lambda1.Hydro
 
 
 bc.transform <- function(x,l1,l2){ #Create function to transform data according to fit parameters
@@ -67,7 +88,7 @@ bc.transform <- function(x,l1,l2){ #Create function to transform data according 
 }
 
 
-scrambled$bcTangoNumAA <- bc.transform(scrambled$TangoPentamerAAInAPRsDensity, lambda1.TangoNumAA, 0) #tranform metrics with fitted parameters
+scrambled$bcTangoNumAA <- bc.transform(scrambled$ScrambledMeanAPR, lambda1.TangoNumAA, 0) #tranform metrics with fitted parameters
 intergenic$bcTangoNumAA <- bc.transform(intergenic$TangoPentamerAAInAPRsDensity, lambda1.TangoNumAA, 0) #...
 masked$bcTangoNumAA <- bc.transform(masked$TangoPentamerAAInAPRsDensity, lambda1.TangoNumAA, 0) #...
 
@@ -79,6 +100,10 @@ masked$bcOiliness <- bc.transform(masked$MannigeHydrophobicityPercent, lambda1.O
 genes$bcThermo <- bc.transform(genes$BoussauThermophilicPercent, lambda1.Thermo, 0) #...
 intergenic$bcThermo <- bc.transform(intergenic$BoussauThermophilicPercent, lambda1.Thermo, 0) #...
 masked$bcThermo <- bc.transform(masked$BoussauThermophilicPercent, lambda1.Thermo, 0) #...
+
+genes$bcHydro <- bc.transform(genes$FILVMW_HydrophobicPercentageUsingDispersionAA, lambda1.Hydro, 0) #...
+intergenic$bcHydro <- bc.transform(intergenic$FILVMW_HydrophobicPercentageUsingDispersionAA, lambda1.Hydro, 0) #...
+masked$bcHydro <- bc.transform(masked$FILVMW_HydrophobicPercentageUsingDispersionAA, lambda1.Hydro, 0) #...
 ```
 
 Generate family of linear models for each phylostratum controlling for gene family variance
@@ -88,7 +113,7 @@ Generate family of linear models for each phylostratum controlling for gene fami
 library(nlme)
 
 #Tango scrambled fits
-fit.APR.scrambled <- lme(bcTangoNumAA ~ GeneFamilyPhylostratum, random = ~ 1|GeneFamilyNumber, data = scrambled, control = list(opt = "optim"), na.action = na.exclude) #fit linear mixed-effects model for genes with gene family as random error term
+fit.APR.scrambled <- lme(bcTangoNumAA ~ PS21_GeneFamilyPhylostratum, random = ~ 1|PS21_GeneFamilyNumber, data = scrambled, control = list(opt = "optim"), na.action = na.exclude) #fit linear mixed-effects model for genes with gene family as random error term
 summary(fit.APR.scrambled) 
 
 fit.APR.intergenic <- lm(bcTangoNumAA ~ 1 , data = intergenic) #fit standard linear model to intergenic controls
@@ -97,7 +122,7 @@ fit.APR.masked <- lm(bcTangoNumAA ~ 1 , data = masked) #...same for repeat-maske
 
 
 #Hydrophobicity fits
-fit.oiliness.genes <- lme(bcOiliness ~ GeneFamilyPhylostratum , random = ~ 1|GeneFamilyNumber, data = genes, control = list(opt = "optim"), na.action = na.exclude)
+fit.oiliness.genes <- lme(bcOiliness ~ PS21_GeneFamilyPhylostratum , random = ~ 1|PS21_GeneFamilyNumber, data = genes, control = list(opt = "optim"), na.action = na.exclude)
 summary(fit.oiliness.genes) #fit a mixed-effects model with gene family as a random effect term
 
 fit.oiliness.intergenic <- lm(bcOiliness ~ 1, data = intergenic)
@@ -105,12 +130,18 @@ fit.oiliness.masked <- lm(bcOiliness ~ 1, data = masked)
 
 
 #Thermophilicity fits
-fit.thermo.genes <- lme(bcThermo ~ GeneFamilyPhylostratum , random = ~ 1|GeneFamilyNumber, data = genes, control = list(opt = "optim"), na.action = na.exclude)
+fit.thermo.genes <- lme(bcThermo ~ PS21_GeneFamilyPhylostratum , random = ~ 1|PS21_GeneFamilyNumber, data = genes, control = list(opt = "optim"), na.action = na.exclude)
 summary(fit.thermo.genes) #fit a mixed-effects model with gene family as a random effect term
 
 fit.thermo.intergenic <- lm(bcThermo ~ 1, data = intergenic)
 fit.thermo.masked <- lm(bcThermo ~ 1, data = masked)
 
+#Hydrophobicity fits
+fit.hydro.genes <- lme(bcHydro ~ PS21_GeneFamilyPhylostratum , random = ~ 1|PS21_GeneFamilyNumber, data = genes, control = list(opt = "optim"), na.action = na.exclude)
+summary(fit.hydro.genes) #fit a mixed-effects model with gene family as a random effect term
+
+fit.hydro.intergenic <- lm(bcHydro ~ 1, data = intergenic)
+fit.hydro.masked <- lm(bcHydro ~ 1, data = masked)
 
 ```
 
@@ -152,6 +183,18 @@ masked.df.thermo <- data.frame(Phylostratum = c("Repeat-masked"), Intercept = su
 remove(fit.thermo.masked)
 
 
+# Put model estimates into data frames for hydrophobicity data
+last.index.genes.hydro <- length(fixed.effects(fit.hydro.genes))  #store number of PS that have been fit for genes
+genes.df.hydro <- data.frame(Phylostratum = names(fixed.effects(fit.hydro.genes)[1:last.index.genes.hydro]), Intercept = unname(fixed.effects(fit.hydro.genes)[1:last.index.genes.hydro]), SE = unname(summary(fit.hydro.genes)$tTable[,2][1:last.index.genes.hydro]), Model = "Genes", Metric = "Hydrophobicity") #create data frame to store lm results for the genes fit
+remove(fit.hydro.genes)
+
+intergenic.df.hydro <- data.frame(Phylostratum = c("Intergenic"), Intercept = summary(fit.hydro.intergenic)$coefficients[1], SE = summary(fit.hydro.intergenic)$coefficients[2], Model = "Intergenic", Metric = "Hydrophobicity") #create data frame to store intergenic fit
+remove(fit.hydro.intergenic
+       )
+masked.df.hydro <- data.frame(Phylostratum = c("Repeat-masked"), Intercept = summary(fit.hydro.masked)$coefficients[1], SE = summary(fit.hydro.masked)$coefficients[2], Model = "Repeat-masked", Metric = "Hydrophobicity") #create data frame to store repeat-masked intergenic fit
+remove(fit.hydro.masked)
+
+
 
 ```
 
@@ -163,6 +206,8 @@ scrambled.df.APR$Intercept[2:last.index.scrambled] <- scrambled.df.APR$Intercept
 genes.df.oiliness$Intercept[2:last.index.genes.oiliness] <- genes.df.oiliness$Intercept[2:last.index.genes.oiliness] + genes.df.oiliness$Intercept[1] #...same for other fits
 
 genes.df.thermo$Intercept[2:last.index.genes.thermo] <- genes.df.thermo$Intercept[2:last.index.genes.thermo] + genes.df.thermo$Intercept[1] #...same for other fits
+
+genes.df.hydro$Intercept[2:last.index.genes.hydro] <- genes.df.hydro$Intercept[2:last.index.genes.hydro] + genes.df.hydro$Intercept[1] #...same for other fits
 
 
 #Define reverse transform
@@ -204,9 +249,20 @@ masked.df.thermo$Upper <- bc.reverse.transform((masked.df.thermo$Intercept + mas
 masked.df.thermo$Lower <- bc.reverse.transform((masked.df.thermo$Intercept - masked.df.thermo$SE), lambda1.Thermo, 0)
 masked.df.thermo$Intercept <- bc.reverse.transform(masked.df.thermo$Intercept, lambda1.Thermo, 0)
 
-combined.df <- rbind(scrambled.df.APR, genes.df.oiliness, genes.df.thermo, intergenic.df.APR, intergenic.df.oiliness, intergenic.df.thermo, masked.df.APR, masked.df.oiliness, masked.df.thermo) #combine result data frames
-combined.df$Phylostratum <- replace(as.character(combined.df$Phylostratum),1:(last.index.scrambled+last.index.genes.oiliness+last.index.genes.thermo),c(1:last.index.scrambled,1:last.index.genes.oiliness,1:last.index.genes.thermo)) #change PS names for the scrambled and gene fits to numeric characters
-combined.df$Phylostratum <- with(combined.df, factor(Phylostratum, levels = c(1:max(last.index.genes.thermo,last.index.genes.oiliness,last.index.scrambled),"Intergenic","Repeat-masked"))) #change factor levels for PS for combined results data frame
+genes.df.hydro$Upper <- bc.reverse.transform((genes.df.hydro$Intercept + genes.df.hydro$SE), lambda1.Hydro, 0)
+genes.df.hydro$Lower <- bc.reverse.transform((genes.df.hydro$Intercept - genes.df.hydro$SE), lambda1.Hydro, 0)
+genes.df.hydro$Intercept <- bc.reverse.transform(genes.df.hydro$Intercept, lambda1.Hydro, 0)
+intergenic.df.hydro$Upper <- bc.reverse.transform((intergenic.df.hydro$Intercept + intergenic.df.hydro$SE), lambda1.Hydro, 0)
+intergenic.df.hydro$Lower <- bc.reverse.transform((intergenic.df.hydro$Intercept - intergenic.df.hydro$SE), lambda1.Hydro, 0)
+intergenic.df.hydro$Intercept <- bc.reverse.transform(intergenic.df.hydro$Intercept, lambda1.Hydro, 0)
+masked.df.hydro$Upper <- bc.reverse.transform((masked.df.hydro$Intercept + masked.df.hydro$SE), lambda1.Hydro, 0)
+masked.df.hydro$Lower <- bc.reverse.transform((masked.df.hydro$Intercept - masked.df.hydro$SE), lambda1.Hydro, 0)
+masked.df.hydro$Intercept <- bc.reverse.transform(masked.df.hydro$Intercept, lambda1.Hydro, 0)
+
+
+combined.df <- rbind(scrambled.df.APR, genes.df.oiliness, genes.df.thermo, genes.df.hydro, intergenic.df.APR, intergenic.df.oiliness, intergenic.df.thermo, intergenic.df.hydro, masked.df.APR, masked.df.oiliness, masked.df.thermo, masked.df.hydro) #combine result data frames
+combined.df$Phylostratum <- replace(as.character(combined.df$Phylostratum),1:(last.index.scrambled+last.index.genes.oiliness+last.index.genes.thermo+last.index.genes.hydro),c(1:last.index.scrambled,1:last.index.genes.oiliness,1:last.index.genes.thermo,1:last.index.genes.hydro)) #change PS names for the scrambled and gene fits to numeric characters
+combined.df$Phylostratum <- with(combined.df, factor(Phylostratum, levels = c(1:max(last.index.genes.thermo,last.index.genes.oiliness,last.index.scrambled,last.index.genes.hydro),"Intergenic","Repeat-masked"))) #change factor levels for PS for combined results data frame
 
 ```
 
@@ -231,40 +287,125 @@ colPink <- colorblindPalette[8]
 
 interval.times <- read.table("split_interval_times.txt")
 axis.breaks <- -log10(interval.times$V1)
+linear.scale <- c(-1*interval.times$V1)
+
+log.scale <- c(axis.breaks,-6.9,-6.85)
+label.vector <- c("Cellular org.","Eukaryota","Opisthokonta","Holozoa","Metazoa","","","","","","Vertebrata","Euteleostomi","Tetrapoda","Amniota","Mammalia","Eutheria","Boreoeutheria\n","Euarchontoglires","Rodentia","Mus","Intergenic","Masked")
+
+combined.df$Times <-c(rep(log.scale[1:20],4),rep(-6.9,4),rep(-6.85,4))
 
 
-#axis.breaks <- c(axis.breaks,-7.8,-7.75) #add extra points for controls
-combined.df$Times <-c(rep(axis.breaks,3),rep(-7.8,3),rep(-7.75,3))
-
-aacomposition.summary.plot <- ggplot(combined.df, aes(colour = Metric, fill = Metric, shape = Model)) #Create ggplot object
-aacomposition.summary.plot <- aacomposition.summary.plot + 
+thermophilicity.plot <- ggplot(combined.df[which(combined.df$Metric=="Thermophilicity"),], aes(colour = Metric, fill = Metric, shape = Model)) #Create ggplot object
+thermophilicity.plot <- thermophilicity.plot + 
   geom_pointrange(aes(x = Times, y = Intercept, ymin = Lower, ymax = Upper), size = 0.5, lwd = 1,  show.legend=FALSE) + #add point between error bars
-  geom_vline(xintercept = -7.85, color = "darkgrey", linetype = 2) +
-  scale_x_continuous(labels=c("Cellular org.","Eukaryota","Opisthokonta","Holozoa","Metazoa","","","","","","Vertebrata","Euteleostomi","Tetrapoda","Amniota","Mammalia","Eutheria","Boreoeutheria","\nEuarchontoglires","Rodentia","Intergenic","Repeat-masked"), breaks = unique(combined.df$Times)) + #change x-axis names of phylostrata to taxonomic split names
-  scale_shape_manual(name = "", values = c(22,21,23,24)) + #manually set hollow shapes
-  scale_colour_manual(name = "", values = c(colVermillion,colBlack,colPink), guide = FALSE) + #manually set line colors
-  scale_fill_manual(name = "", values = c(colVermillion,colBlack,colPink), guide = FALSE) + #manually set fill colors
-  ylim(c(0.0,0.45))+
-  annotate("text", x = -8.025, y = 0.4, label = "Thermophilicity", color = colPink) +
-  annotate("text", x = -7.95, y = 0.30, label = "Oiliness", color = colBlack) +
-  annotate("text", x = -8.0, y = 0.12, label = "Aggregation", color = colVermillion) +
+  geom_vline(xintercept = -7, color = "darkgrey", linetype = 2) +
+  scale_x_continuous(labels=label.vector, breaks = unique(combined.df$Times)) + #change x-axis names of phylostrata to taxonomic split names
+  scale_shape_manual(name = "", values = c(21,23,24)) + #manually set hollow shapes
+  scale_colour_manual(name = "", values = c(colPink), guide = FALSE) + #manually set line colors
+  scale_fill_manual(name = "", values = c(colPink), guide = FALSE) + #manually set fill colors
+  ylim(c(0.3,0.45))+
+  ylab("Thermophilicity\n")+
   theme( 
     panel.grid.minor.x = element_blank(),
     axis.title.x = element_blank(), 
     axis.text.y = element_text(size=10),
-    axis.title.y = element_blank(),
+    axis.title.y = element_text(size=11),
     axis.ticks = element_blank(),
-    axis.text.x=element_text(angle = 90, size=c(rep(9,7),8,rep(9,13)), hjust = 1, vjust = 0.5, colour=c(rep("black",7),"lightslategrey",rep("black",11),colDarkBlue,colSkyBlue)),
+    axis.text.x=element_text(angle = 90, size=c(rep(9,7),8,rep(9,14)), hjust = 1, vjust = 0.5, colour=c(rep("black",7),"lightslategrey",rep("black",14))),
     legend.title = element_text(size=11),
     legend.text = element_text(size=8),
     legend.background = element_rect(fill="transparent"),
     legend.position = c(0.5,0.95),
     legend.direction = "horizontal",
     plot.margin=unit(c(0.1,0.1,0.1,0.1), "cm")) #plot specifics for sizes, positions, orientations, etc.
-aacomposition.summary.plot
+thermophilicity.plot
 
-pdf(file = "AAComposition_Summary.pdf", width =6.7, height = 5) #output plot to pdf
-aacomposition.summary.plot
+
+
+oiliness.plot <- ggplot(combined.df[which(combined.df$Metric=="Oiliness"),], aes(colour = Metric, fill = Metric, shape = Model)) #Create ggplot object
+oiliness.plot <- oiliness.plot + 
+  geom_pointrange(aes(x = Times, y = Intercept, ymin = Lower, ymax = Upper), size = 0.5, lwd = 1,  show.legend=FALSE) + #add point between error bars
+  geom_vline(xintercept = -7, color = "darkgrey", linetype = 2) +
+  scale_x_continuous(labels=label.vector, breaks = unique(combined.df$Times)) + #change x-axis names of phylostrata to taxonomic split names
+  scale_shape_manual(name = "", values = c(21,23,24)) + #manually set hollow shapes
+  scale_colour_manual(name = "", values = c(colBlack), guide = FALSE) + #manually set line colors
+  scale_fill_manual(name = "", values = c(colBlack), guide = FALSE) + #manually set fill colors
+  ylim(c(0.15,0.3))+
+  ylab("Oiliness %FILV\n") +
+  theme( 
+    panel.grid.minor.x = element_blank(),
+    axis.title.x = element_blank(), 
+    axis.text.y = element_text(size=10),
+    axis.title.y = element_text(size=11),
+    axis.ticks = element_blank(),
+    axis.text.x=element_blank(),
+    legend.title = element_text(size=11),
+    legend.text = element_text(size=8),
+    legend.background = element_rect(fill="transparent"),
+    legend.position = c(0.5,0.95),
+    legend.direction = "horizontal",
+    plot.margin=unit(c(0.1,0.1,0.1,0.1), "cm")) #plot specifics for sizes, positions, orientations, etc.
+oiliness.plot
+
+hydrophobicity.plot <- ggplot(combined.df[which(combined.df$Metric=="Hydrophobicity"),], aes(colour = Metric, fill = Metric, shape = Model)) #Create ggplot object
+hydrophobicity.plot <- hydrophobicity.plot + 
+  geom_pointrange(aes(x = Times, y = Intercept, ymin = Lower, ymax = Upper), size = 0.5, lwd = 1,  show.legend=FALSE) + #add point between error bars
+  geom_vline(xintercept = -7, color = "darkgrey", linetype = 2) +
+  scale_x_continuous(labels=label.vector, breaks = unique(combined.df$Times)) + #change x-axis names of phylostrata to taxonomic split names
+  scale_shape_manual(name = "", values = c(21,23,24)) + #manually set hollow shapes
+  scale_colour_manual(name = "", values = c(colGreen), guide = FALSE) + #manually set line colors
+  scale_fill_manual(name = "", values = c(colGreen), guide = FALSE) + #manually set fill colors
+  #ylim(c(0.15,0.3))+
+  ylab("Hydrophobicity\n") +
+  theme( 
+    panel.grid.minor.x = element_blank(),
+    axis.title.x = element_blank(), 
+    axis.text.y = element_text(size=10),
+    axis.title.y = element_text(size=11),
+    axis.ticks = element_blank(),
+    axis.text.x=element_blank(),
+    legend.title = element_text(size=11),
+    legend.text = element_text(size=8),
+    legend.background = element_rect(fill="transparent"),
+    legend.position = c(0.5,0.95),
+    legend.direction = "horizontal",
+    plot.margin=unit(c(0.1,0.1,0.1,0.1), "cm")) #plot specifics for sizes, positions, orientations, etc.
+hydrophobicity.plot
+
+
+
+aggregation.plot <- ggplot(combined.df[which(combined.df$Metric=="Aggregation"),], aes(colour = Metric, fill = Metric, shape = Model)) #Create ggplot object
+aggregation.plot <- aggregation.plot + 
+  geom_pointrange(aes(x = Times, y = Intercept, ymin = Lower, ymax = Upper), size = 0.5, lwd = 1,  show.legend=FALSE) + #add point between error bars
+  geom_vline(xintercept = -7, color = "darkgrey", linetype = 2) +
+  scale_x_continuous(labels=label.vector, breaks = unique(combined.df$Times)) + #change x-axis names of phylostrata to taxonomic split names
+  scale_shape_manual(name = "", values = c(22,23,24)) + #manually set hollow shapes
+  scale_colour_manual(name = "", values = c(colVermillion), guide = FALSE) + #manually set line colors
+  scale_fill_manual(name = "", values = c(colVermillion), guide = FALSE) + #manually set fill colors
+  ylim(c(0.0,0.2))+
+  ylab("Aggregation\n") +
+  theme( 
+    panel.grid.minor.x = element_blank(),
+    axis.title.x = element_blank(), 
+    axis.text.y = element_text(size=10),
+    axis.title.y = element_text(size=11),
+    axis.ticks = element_blank(),
+    axis.text.x=element_text(angle = 90, size=c(rep(9,7),8,rep(9,14)), hjust = 1, vjust = 0.5, colour=c(rep("black",7),"lightslategrey",rep("black",12),colDarkBlue,colSkyBlue)),
+    legend.title = element_text(size=11),
+    legend.text = element_text(size=8),
+    legend.background = element_rect(fill="transparent"),
+    legend.position = c(0.5,0.95),
+    legend.direction = "horizontal",
+    plot.margin=unit(c(0.1,0.1,0.1,0.1), "cm")) #plot specifics for sizes, positions, orientations, etc.
+aggregation.plot
+
+load("ISD_plot.grob") #easier to run ISD script to generate plot.ISD, then grab from memory, as below
+
+
+tiff(file = "AA_Composition_Summary.tif", width =20, height = 20, units = "cm", res = 300) #output plot to tif
+grid.newpage()
+grid.draw(rbind(ggplotGrob(aggregation.plot + theme(axis.text.x=element_blank())),ggplotGrob(hydrophobicity.plot), ggplotGrob(plot.ISD+theme(axis.text.x=element_blank())),ggplotGrob(thermophilicity.plot),size = "last"))
 dev.off()
+
 
 ```
