--- a/ISD-versus-phylostratum-final.Rmd
+++ b/ISD-versus-phylostratum-final.Rmd
@@ -6,37 +6,44 @@ output: html_document
   
 Load mySQL table info for genes
 ```{r}
-gene.data <- read.table("2017-06-20_EnsemblV73_MouseGenes.tab", sep="\t",header=T) 
-protein.data <- read.table("2017-06-20_EnsemblV73_MouseProteins.tab", sep="\t",header=T)
+gene.data <- read.table("2018-04-16_EnsemblV73_MouseGenes.tab", sep="\t",header=T) 
+protein.data <- read.table("2018-04-16_EnsemblV73_MouseProteins.tab", sep="\t",header=T)
 
 ISD.data <- merge(gene.data, protein.data, by.x="MouseGenesPrimaryKey", by.y="MouseGenesForeignKey")
 remove(gene.data)
 remove(protein.data)
 ```
 
+Remove phylostratum 0 (unclassifiable), gene families with ambiguous age, genes without rat homologs, and ORFan proteins
+```{r}
+ISD.data <- ISD.data[which(ISD.data$GeneFamilyPhylostratum != "0" & ISD.data$PS21_GeneFamilyPhylostratum != "21" & ISD.data$PS21_ExcludedGeneBinary != "1" ),] #exclude unclassifiable genes, false-positive rich ORFans
+paralogs.list <- c("ENSMUSG00000073631","ENSMUSG00000079800","ENSMUSG00000094728","ENSMUSG00000095240","ENSMUSG00000095366","ENSMUSG00000095450","ENSMUSG00000095787","ENSMUSG00000096100","ENSMUSG00000096850")
+
+ISD.data <- ISD.data[which(!(ISD.data$EnsemblGeneUID %in% paralogs.list)),]#remove genes with known paralogy to other genes
+
+```
+
+```{r}
+ISD.data[which(ISD.data$EnsemlGeneUID=="ENSMUSG00000067543"),]$PS21_GeneFamilyNumber <-ISD.data[which(ISD.data$EnsemlGeneUID=="ENSMUSG00000052262"),]$PS21_GeneFamilyNumber #Fix gene family for two pahari genes
+
+```
+
 Factorize gene family number and phylostratum
 ```{r}
-ISD.data$GeneFamilyNumber <- as.factor(ISD.data$GeneFamilyNumber) #factorize gene family ID to prevent numeric interpretation by R
-ISD.data$GeneFamilyPhylostratum <- as.factor(ISD.data$GeneFamilyPhylostratum) #factorize variable to ensure that it is not interpreted as numeric variable
-ISD.data$GeneFamilyPhylostratum <- with(ISD.data, factor(GeneFamilyPhylostratum, levels = c(sort(unique(ISD.data$GeneFamilyPhylostratum)),"Intergenic","Repeat-masked"))) # set levels of categorical phylostratum variable
-ISD.data$Phylostratum <- as.factor(ISD.data$Phylostratum) #factorize variable to ensure that it is not interpreted as numeric variable
-ISD.data$Phylostratum <- with(ISD.data, factor(Phylostratum, levels = c(sort(unique(ISD.data$Phylostratum)),"Intergenic","Repeat-masked"))) # set levels of categorical phylostratum variable
-ISD.data$ExcludedGeneBinary <- as.factor(ISD.data$ExcludedGeneBinary) #factorize binary category for gene families with ambiguous age
+ISD.data$PS21_GeneFamilyNumber <- as.factor(ISD.data$PS21_GeneFamilyNumber) #factorize gene family ID to prevent numeric interpretation by R
+ISD.data$PS21_GeneFamilyPhylostratum <- as.factor(ISD.data$PS21_GeneFamilyPhylostratum) #factorize variable to ensure that it is not interpreted as numeric variable
+ISD.data$PS21_GeneFamilyPhylostratum <- with(ISD.data, factor(PS21_GeneFamilyPhylostratum, levels = c(sort(unique(ISD.data$PS21_GeneFamilyPhylostratum)),"Intergenic","Repeat-masked"))) # set levels of categorical phylostratum variable
+ISD.data$PS21_ExcludedGeneBinary <- as.factor(ISD.data$PS21_ExcludedGeneBinary) #factorize binary category for gene families with ambiguous age
 ```
 
 Trim data frames to only the information needed
 ```{r}
-ISD.data <- ISD.data[,c("EnsemblGeneUID","EnsemblProteinUID","Phylostratum","GeneFamilyPhylostratum","GeneFamilyNumber","NoCysIUPredMeanISD","GeneOrControlDesignation","ExcludedGeneBinary","EvolutionaryRateHighestOrthologRate")] #subset needed columns
-ISD.data[which(ISD.data$GeneOrControlDesignation == "IntergenicNucleotideSeqControl"),]$GeneFamilyPhylostratum <- "Intergenic" #Give intergenic sequence a categorical phylostratum for comparison
-ISD.data[which(ISD.data$GeneOrControlDesignation == "MaskedIntergenicNucleotideSeqControl"),]$GeneFamilyPhylostratum <- "Repeat-masked" #Give repeat-masked intergenic sequence a categorical phylostratum
-ISD.data[which(ISD.data$GeneOrControlDesignation == "IntergenicNucleotideSeqControl"),]$Phylostratum <- "Intergenic" #Give intergenic sequence a categorical phylostratum for comparison
-ISD.data[which(ISD.data$GeneOrControlDesignation == "MaskedIntergenicNucleotideSeqControl"),]$Phylostratum <- "Repeat-masked" #Give repeat-masked intergenic sequence a categorical phylostratum
+ISD.data <- ISD.data[,c("EnsemblGeneUID","EnsemblProteinUID","Phylostratum","PS21_GeneFamilyPhylostratum","PS21_GeneFamilyNumber","NoCysIUPredMeanISD","GeneOrControlDesignation","PS21_ExcludedGeneBinary","EvolutionaryRateHighestOrthologRate")] #subset needed columns
+ISD.data[which(ISD.data$GeneOrControlDesignation == "IntergenicNucleotideSeqControl"),]$PS21_GeneFamilyPhylostratum <- "Intergenic" #Give intergenic sequence a categorical phylostratum for comparison
+ISD.data[which(ISD.data$GeneOrControlDesignation == "MaskedIntergenicNucleotideSeqControl"),]$PS21_GeneFamilyPhylostratum <- "Repeat-masked" #Give repeat-masked intergenic sequence a categorical phylostratum
+
 ```
 
-Remove phylostratum 0 (unclassifiable), gene families with ambiguous age, genes without rat homologs, and ORFan proteins
-```{r}
-ISD.data <- ISD.data[which(ISD.data$GeneFamilyPhylostratum != "0" & ISD.data$GeneFamilyPhylostratum != "20" & ISD.data$ExcludedGeneBinary != "1" ),] #exclude unclassifiable genes, false-positive rich ORFans
-```
 
 Use two-parameter Box-Cox transform to reduce skewness
 ```{r}
@@ -59,15 +66,15 @@ ISD.data$bcISD <- bc.transform(ISD.data$NoCysIUPredMeanISD, lambda1, lambda2) #c
 Generate family of linear models for each phylostratum, test significance of gene vs. randomized control controlling for gene family variance
 ```{r}
 library(nlme)
-fit.ISD.genes.standard <- lm(bcISD ~ GeneFamilyPhylostratum, data = ISD.data[which(ISD.data$GeneOrControlDesignation == "CodingGene"),]) #fit standard linear model of ISD vs. PS
+fit.ISD.genes.standard <- lm(bcISD ~ PS21_GeneFamilyPhylostratum, data = ISD.data[which(ISD.data$GeneOrControlDesignation == "CodingGene"),]) #fit standard linear model of ISD vs. PS
 genes.independent.AIC <- AIC(fit.ISD.genes.standard) #print AIC
 summary(fit.ISD.genes.standard)
 
-fit.ISD.genes <- lme(bcISD ~ GeneFamilyPhylostratum, random = ~ 1|GeneFamilyNumber, data = ISD.data[which(ISD.data$GeneOrControlDesignation == "CodingGene"),]) #fit mixed-effects model with gene family annotation as random effect
+fit.ISD.genes <- lme(bcISD ~ PS21_GeneFamilyPhylostratum, random = ~ 1|PS21_GeneFamilyNumber, data = ISD.data[which(ISD.data$GeneOrControlDesignation == "CodingGene"),], na.action = na.exclude,  method = "ML") #fit mixed-effects model with gene family annotation as random effect
 full.model.AIC <- summary(fit.ISD.genes)$AIC #print AIC
 summary(fit.ISD.genes)
 
-fit.ISD.genes.random <- lme(bcISD ~ 1, random = ~ 1|GeneFamilyNumber, data = ISD.data[which(ISD.data$GeneOrControlDesignation == "CodingGene"),]) #fit model with PS and just random effect of gene family for comparison
+fit.ISD.genes.random <- lme(bcISD ~ 1, random = ~ 1|PS21_GeneFamilyNumber, data = ISD.data[which(ISD.data$GeneOrControlDesignation == "CodingGene"),], na.action = na.exclude) #fit model with PS and just random effect of gene family for comparison
 no.phylostratum.AIC <- summary(fit.ISD.genes.random)$AIC #print AIC
 summary(fit.ISD.genes.random)
 
@@ -79,9 +86,9 @@ genes.independent.AIC - full.model.AIC
 print("Delta AIC no phylostratum versus gene families independent: ")
 no.phylostratum.AIC - full.model.AIC
 
-fit.ISD.scrambled <- lme(bcISD ~ GeneFamilyPhylostratum , random = ~ 1|GeneFamilyNumber, data = ISD.data[ISD.data$GeneOrControlDesignation == "ScrambledByAminoAcidControl",]) #fit mixed-effects model to scrambled controls with random error on gene families
+fit.ISD.scrambled <- lme(bcISD ~ PS21_GeneFamilyPhylostratum , random = ~ 1|PS21_GeneFamilyNumber, data = ISD.data[ISD.data$GeneOrControlDesignation == "ScrambledByAminoAcidControl",], na.action = na.exclude) #fit mixed-effects model to scrambled controls with random error on gene families
 
-fit.ISD.gc <- lme(bcISD ~ GeneFamilyPhylostratum , random = ~ 1|GeneFamilyNumber, data = ISD.data[ISD.data$GeneOrControlDesignation == "RandomlyGeneratedControlWithConsistentGC" ,]) #fit mixed-effects model to GC-content controls with random error on gene families
+fit.ISD.gc <- lme(bcISD ~ PS21_GeneFamilyPhylostratum , random = ~ 1|PS21_GeneFamilyNumber, data = ISD.data[ISD.data$GeneOrControlDesignation == "RandomlyGeneratedControlWithConsistentGC" ,], na.action = na.exclude) #fit mixed-effects model to GC-content controls with random error on gene families
 
 fit.ISD.intergenic <- lm(bcISD ~ 1, data = ISD.data[ISD.data$GeneOrControlDesignation == "IntergenicNucleotideSeqControl",]) #fit standard linear model to intergenic controls
 
@@ -162,23 +169,19 @@ library("grid")
 
 interval.times <- read.table("split_interval_times.txt")
 axis.breaks <- -log10(interval.times$V1)
-axis.breaks <- c(axis.breaks,-7.8,-7.75) #add extra points for controls
-split.times <- as.character(round(interval.times$V1/1000000.0))
+linear.scale <- c(-1*interval.times$V1)
 
-#Create ggplot2 plotting object to create plot with various controls
-plot.ISD <- ggplot(combined.df[which(combined.df$Model == "Genes"  |combined.df$Model == "Intergenic"|combined.df$Model =="Repeat-masked"),], aes(colour = Model, fill = Model, shape = Model))
+log.scale <- c(axis.breaks,-6.9,-6.85)
+label.vector <- c("Cellular org.","Eukaryota","Opisthokonta","Holozoa","Metazoa","","","","","","Vertebrata","Euteleostomi","Tetrapoda","Amniota","Mammalia","Eutheria","Boreoeutheria\n","Euarchontoglires","Rodentia","Mus","Intergenic","Masked")
+
+
+plot.ISD <- ggplot(combined.df[which(combined.df$Model == "Genes"  |combined.df$Model == "Intergenic"|combined.df$Model =="Repeat-masked"),], aes(shape = Model))
 plot.ISD <- plot.ISD + 
-  geom_pointrange(aes(x = axis.breaks, y = bc.reverse.transform(Intercept, lambda1, lambda2), ymin = bc.reverse.transform(Intercept - SE, lambda1, lambda2), ymax = bc.reverse.transform(Intercept + SE, lambda1, lambda2)), size = 0.5, lwd = 0.5,   show.legend=FALSE) +
-  
-  
-  annotate("text", x = axis.breaks[c(1:5,11:19)], y = rep(0.07,14), label = split.times[c(1:5,11:19)], angle=60, hjust = 0, vjust = 0.5, size =2.25) +
-  annotate("text", x = -7.75, y = 0.1, label = "Avg. TMRCAs \n(mya)", size = 2.25 ) +
-  
-  
-  scale_x_continuous(labels=c("Cellular org.","Eukaryota","Opisthokonta","Holozoa","Metazoa","","","","","","Vertebrata","Euteleostomi","Tetrapoda","Amniota","Mammalia","Eutheria","Boreoeutheria","\nEuarchontoglires","Rodentia","Intergenic","Repeat-masked"), breaks = axis.breaks) + #change x-axis names of phylostrata to taxonomic split names
-  scale_shape_manual(name = "", values = c(21,22,23)) +
-  scale_colour_manual(name = "", values = c(colBlack,colDarkBlue,colSkyBlue)) +
-  scale_fill_manual(name = "", values = c(colBlack,colDarkBlue,colSkyBlue)) +
+  geom_pointrange(aes(x = log.scale, y = bc.reverse.transform(Intercept, lambda1, lambda2), ymin = bc.reverse.transform(Intercept - SE, lambda1, lambda2), ymax = bc.reverse.transform(Intercept + SE, lambda1, lambda2)), size = 0.5, lwd = 0.5,  colour=colSkyBlue, fill=colSkyBlue, show.legend=FALSE) +
+  geom_vline(xintercept = -7, color = "darkgrey", linetype = 2) +
+  scale_x_continuous(labels=label.vector, breaks = log.scale) + #change x-axis names of phylostrata to taxonomic split names
+  scale_y_reverse() +
+  scale_shape_manual(name = "", values = c(21,23,24)) +
   ylab("Intrinsic structural disorder") +
   guides(shape=guide_legend(ncol=3, byrow=TRUE)) +
   theme(
@@ -187,7 +190,7 @@ plot.ISD <- plot.ISD +
         axis.text.y = element_text(size=9, colour="black"),
         axis.title.y = element_text(size=11),
         axis.ticks = element_blank(),
-        axis.text.x=element_text(angle = 90, size=c(rep(9,7),8,rep(9,13)), hjust = 1, vjust = 0.5, colour=c(rep("black",7),"lightslategrey",rep("black",11),colDarkBlue,colSkyBlue)),
+        axis.text.x=element_text(angle = 90, size=c(rep(9,7),8,rep(9,14)), hjust = 1, vjust = 0.5, colour=c(rep("black",7),"lightslategrey",rep("black",14))),
         legend.title = element_text(size=9),
         legend.text = element_text(size=8),
         legend.background = element_rect(fill="transparent"),
@@ -197,8 +200,11 @@ plot.ISD <- plot.ISD +
 
 plot.ISD
 
+plot.ISD.grob <- ggplotGrob(plot.ISD)
+save(plot.ISD.grob, file="ISD_plot.grob")
+
 #Create pdf with particular dimensions 
-pdf(file = "ISDvsPSGenesIntergenicMasked.pdf", width =6.7, height = 3)
+tiff(file = "ISD_Genes_Intergenic_Masked.tif", width =20, height = 10, units="cm",res=300)
 plot.ISD
 dev.off()
 
