--- a/Length-dNdS-Expression-versus-phylostratum.Rmd
+++ b/Length-dNdS-Expression-versus-phylostratum.Rmd
@@ -6,8 +6,8 @@ output: html_document
 
 Load mySQL table info for genes
 ```{r}
-gene.data <- read.table("2017-06-20_EnsemblV73_MouseGenes.tab", sep="\t",header=T) 
-protein.data <- read.table("2017-06-20_EnsemblV73_MouseProteins.tab", sep="\t",header=T)
+gene.data <- read.table("InputFinal/EnsemblV73_MouseGenes.tab", sep="\t",header=T) 
+protein.data <- read.table("InputFinal/EnsemblV73_MouseProteins.tab", sep="\t",header=T)
 
 APR.data <- merge(gene.data, protein.data, by.x="MouseGenesPrimaryKey", by.y="MouseGenesForeignKey")
 remove(gene.data)
@@ -16,23 +16,29 @@ remove(protein.data)
 
 Factorize gene family number and phylostratum
 ```{r}
-APR.data$GeneFamilyNumber <- as.factor(APR.data$GeneFamilyNumber) #factorize gene family ID to prevent numeric interpretation by R
-APR.data$GeneFamilyPhylostratum <- as.factor(APR.data$GeneFamilyPhylostratum) #factorize variable to ensure that it is not interpreted as numeric variable
-APR.data$GeneFamilyPhylostratum <- with(APR.data, factor(GeneFamilyPhylostratum, levels = c(sort(unique(APR.data$GeneFamilyPhylostratum)),"Intergenic","Masked"))) # set levels of categorical phylostratum variable
-APR.data$ExcludedGeneBinary <- as.factor(APR.data$ExcludedGeneBinary) #factorize binary category for gene families with ambiguous age
+
+paralogs.list <- c("ENSMUSG00000073631","ENSMUSG00000079800","ENSMUSG00000094728","ENSMUSG00000095240","ENSMUSG00000095366","ENSMUSG00000095450","ENSMUSG00000095787","ENSMUSG00000096100","ENSMUSG00000096850")
+APR.data <- APR.data[which(APR.data$PS21_GeneFamilyPhylostratum != "0" & APR.data$PS21_GeneFamilyPhylostratum != "21" & APR.data$PS21_ExcludedGeneBinary != "1" ),] #exclude unclassifiable genes, false-positive rich ORFans
+APR.data <- APR.data[which(!(APR.data$EnsemblGeneUID %in% paralogs.list)),]#remove genes with known paralogy to other genes
+
+
+APR.data[which(APR.data$EnsemlGeneUID=="ENSMUSG00000067543"),]$PS21_GeneFamilyNumber <- APR.data[which(APR.data$EnsemlGeneUID=="ENSMUSG00000052262"),]$PS21_GeneFamilyNumber #Fix gene family for two pahari genes
+
+
+APR.data$PS21_GeneFamilyNumber <- as.factor(APR.data$PS21_GeneFamilyNumber) #factorize gene family ID to prevent numeric interpretation by R
+APR.data$PS21_GeneFamilyPhylostratum <- as.factor(APR.data$PS21_GeneFamilyPhylostratum) #factorize variable to ensure that it is not interpreted as numeric variable
+APR.data$PS21_GeneFamilyPhylostratum <- with(APR.data, factor(PS21_GeneFamilyPhylostratum, levels = c(sort(unique(APR.data$PS21_GeneFamilyPhylostratum)),"Intergenic","Masked"))) # set levels of categorical phylostratum variable
+APR.data$PS21_ExcludedGeneBinary <- as.factor(APR.data$PS21_ExcludedGeneBinary) #factorize binary category for gene families with ambiguous age
+
 APR.data$ProteinSeqLength <- as.numeric(APR.data$ProteinSeqLength)
 ```
 
 Trim data frames to only the information needed
 ```{r}
-APR.data <- APR.data[,c("EnsemblGeneUID","GeneFamilyPhylostratum","GeneFamilyNumber","PaxDBExpression","GeneOrControlDesignation","EvolutionaryRateHighestOrthologRate","ExcludedGeneBinary", "ProteinSeqLength")] #subset needed columns
+APR.data <- APR.data[,c("EnsemblGeneUID","PS21_GeneFamilyPhylostratum","PS21_GeneFamilyNumber","PaxDBExpression","GeneOrControlDesignation","EvolutionaryRateHighestOrthologRate","PS21_ExcludedGeneBinary", "ProteinSeqLength")] #subset needed columns
 
 ```
 
-Remove phylostratum 0 (unclassifiable), gene families with ambiguous age, genes without rat homologs, and ORFan proteins
-```{r}
-APR.data <- APR.data[which(APR.data$GeneFamilyPhylostratum != "0" &APR.data$GeneFamilyPhylostratum != "20" & APR.data$ExcludedGeneBinary != "1" ),] #exclude unclassifiable genes, false-positive rich ORFans
-```
 
 Use two-parameter Box-Cox transform to reduce skewness
 ```{r}
@@ -71,13 +77,15 @@ APR.data$bcExpression <- bc.transform(APR.data$PaxDBExpression, lambda1.expressi
 Generate family of linear models for each phylostratum, test significance of gene vs. randomized control controlling for gene family variance
 ```{r}
 library(nlme)
-fit.length.genes <- lme(bcLength ~ GeneFamilyPhylostratum , random = ~ 1|GeneFamilyNumber, data = APR.data[which(APR.data$GeneOrControlDesignation == "CodingGene"),]) #generate a linear mixed-effects model fit to mouse genes with gene family as random error
+
+
+fit.length.genes <- lme(bcLength ~ 1 , random = ~ 1|PS21_GeneFamilyNumber, data = APR.data[which(APR.data$GeneOrControlDesignation == "CodingGene"),]) #generate a linear mixed-effects model fit to mouse genes with gene family as random error
 summary(fit.length.genes) #print fit AIC for mouse genes with gene family random error
 
-fit.rate.genes <- lme(bcRate ~ GeneFamilyPhylostratum, random = ~ 1|GeneFamilyNumber, data = APR.data[APR.data$GeneOrControlDesignation == "CodingGene",]) #generate a linear mixed-effects model fit to mouse genes with gene family as random error, add dNdS as fixed term, exclude genes without a corresponding dNdS value for mouse-rat comparisons
+fit.rate.genes <- lme(bcRate ~ 1, random = ~ 1|PS21_GeneFamilyNumber, data = APR.data[which(APR.data$GeneOrControlDesignation == "CodingGene"),], na.action = "na.exclude") #generate a linear mixed-effects model fit to mouse genes with gene family as random error, add dNdS as fixed term, exclude genes without a corresponding dNdS value for mouse-rat comparisons
 summary(fit.rate.genes) #print fit AIC for evolutionary rate corrected linear model
 
-fit.expression.genes <- lme(bcExpression ~ GeneFamilyPhylostratum, random = ~ 1|GeneFamilyNumber, data = APR.data[APR.data$GeneOrControlDesignation == "CodingGene",], na.action = "na.exclude") #generate a linear mixed-effects model fit to mouse genes with gene family as random error, add dNdS as fixed term, exclude genes without a corresponding dNdS value for mouse-rat comparisons
+fit.expression.genes <- lme(bcExpression ~ 1, random = ~ 1|PS21_GeneFamilyNumber, data = APR.data[which(APR.data$GeneOrControlDesignation == "CodingGene"),], na.action = "na.exclude") #generate a linear mixed-effects model fit to mouse genes with gene family as random error, add dNdS as fixed term, exclude genes without a corresponding dNdS value for mouse-rat comparisons
 summary(fit.expression.genes) #print fit AIC for evolutionary rate corrected linear model
 
 remove(APR.data)
@@ -99,17 +107,34 @@ expression.df <- data.frame(Phylostratum = names(fixef(fit.expression.genes)[1:l
 Adjust means for each phylostrata by incrementing by the first mean (adjust for R convention), combine data frames per categorization
 ```{r}
 # Adjust intecepts, combine data frames
-length.df$Intercept[2:last.index.length] <- length.df$Intercept[2:last.index.length] + length.df$Intercept[1] #increment means by primary intercept, corrects for R convention of relative means
+#length.df$Intercept[2:last.index.length] <- length.df$Intercept[2:last.index.length] + length.df$Intercept[1] #increment means by primary intercept, corrects for R convention of relative means
 length.df$Phylostratum <- replace(as.character(length.df$Phylostratum),1:(last.index.length),c(1:last.index.length)) #replace linear model text with readable phylostratum names
 length.df$Phylostratum <- with(length.df, factor(Phylostratum, levels = c(1:last.index.length)))#spcify factor levels
 
-rate.df$Intercept[2:last.index.rate] <- rate.df$Intercept[2:last.index.rate] + rate.df$Intercept[1]  #...same as above
+#rate.df$Intercept[2:last.index.rate] <- rate.df$Intercept[2:last.index.rate] + rate.df$Intercept[1]  #...same as above
 rate.df$Phylostratum <- replace(as.character(rate.df$Phylostratum),1:(last.index.rate),c(1:last.index.rate)) #replace linear model text with readable phylostratum names
 rate.df$Phylostratum <- with(rate.df, factor(Phylostratum, levels = c(1:last.index.rate)))#spcify factor levels
 
-expression.df$Intercept[2:last.index.expression] <- expression.df$Intercept[2:last.index.expression] + expression.df$Intercept[1]  #...same as above
+#expression.df$Intercept[2:last.index.expression] <- expression.df$Intercept[2:last.index.expression] + expression.df$Intercept[1]  #...same as above
 expression.df$Phylostratum <- replace(as.character(expression.df$Phylostratum),1:(last.index.expression),c(1:last.index.expression)) #replace linear model text with readable phylostratum names
 expression.df$Phylostratum <- with(expression.df, factor(Phylostratum, levels = c(1:last.index.expression)))#spcify factor levels
+```
+
+Get estimates for central tendencies
+```{r}
+#Create function for reverse box-cox transform to retransform data onto readable axis (note that this preserves relative comparison of certainty between PS but does not preserve absolute measure of SEM)
+bc.reverse.transform <- function(x,l1,l2){
+  x.reverse.transform <- (x*l1+1)^(1/l1)-l2
+  return(x.reverse.transform)
+}
+
+length.mean <- bc.reverse.transform(length.df$Intercept,lambda1.length,lambda2.length)
+length.mean
+rate.mean <- bc.reverse.transform(rate.df$Intercept, lambda1.rate, lambda2.rate)
+rate.mean
+expression.mean <- bc.reverse.transform(expression.df$Intercept, lambda1.expression, lambda2.expression)
+expression.mean
+
 ```
 
 Create colorblind friendly color scheme and reverse transform function
