--- a/SLiMs-vs-Phylostratum-Summary.Rmd
+++ b/SLiMs-vs-Phylostratum-Summary.Rmd
@@ -6,8 +6,8 @@ output: html_document
   
 Load mySQL table info for genes
 ```{r}
-gene.data <- read.table("2017-06-20_EnsemblV73_MouseGenes.tab", sep="\t",header=T) 
-protein.data <- read.table("2017-06-20_EnsemblV73_MouseProteins.tab", sep="\t",header=T)
+gene.data <- read.table("2018-04-16_EnsemblV73_MouseGenes.tab", sep="\t",header=T) 
+protein.data <- read.table("2018-04-16_EnsemblV73_MouseProteins.tab", sep="\t",header=T)
 
 APR.data <- merge(gene.data, protein.data, by.x="MouseGenesPrimaryKey", by.y="MouseGenesForeignKey")
 remove(gene.data)
@@ -16,22 +16,27 @@ remove(protein.data)
 
 Remove phylostratum 0 (unclassifiable), gene families with ambiguous age, genes without rat homologs, and ORFan proteins
 ```{r}
-APR.data <- APR.data[which(APR.data$GeneFamilyPhylostratum != "0" & APR.data$GeneFamilyPhylostratum != "20" & APR.data$ExcludedGeneBinary != "1" ),] #exclude unclassifiable genes, false-positive rich ORFans
+paralogs.list <- c("ENSMUSG00000073631","ENSMUSG00000079800","ENSMUSG00000094728","ENSMUSG00000095240","ENSMUSG00000095366","ENSMUSG00000095450","ENSMUSG00000095787","ENSMUSG00000096100","ENSMUSG00000096850")
+APR.data <- APR.data[which(APR.data$PS21_GeneFamilyPhylostratum != "0" & APR.data$PS21_GeneFamilyPhylostratum != "21" & APR.data$PS21_ExcludedGeneBinary != "1" ),] #exclude unclassifiable genes, false-positive rich ORFans
+APR.data <- APR.data[which(!(APR.data$EnsemblGeneUID %in% paralogs.list)),]#remove genes with known paralogy to other genes
+APR.data[which(APR.data$EnsemlGeneUID=="ENSMUSG00000067543"),]$PS21_GeneFamilyNumber <- APR.data[which(APR.data$EnsemlGeneUID=="ENSMUSG00000052262"),]$PS21_GeneFamilyNumber #Fix gene family for two pahari genes
+
+
 ```
 
 Trim data frame to only the information needed
 ```{r}
-genes <- APR.data[which(APR.data$GeneOrControlDesignation == "CodingGene"),c("EnsemblGeneUID","GeneFamilyNumber","GeneFamilyPhylostratum", "ELMSLiMDensity")] #subset out genes
-intergenic <- APR.data[which(APR.data$GeneOrControlDesignation == "IntergenicNucleotideSeqControl"),c("EnsemblGeneUID","GeneFamilyNumber","GeneFamilyPhylostratum","ELMSLiMDensity")] #subset out intergenic
-masked <- APR.data[which(APR.data$GeneOrControlDesignation == "MaskedIntergenicNucleotideSeqControl"),c("EnsemblGeneUID","GeneFamilyNumber","GeneFamilyPhylostratum","ELMSLiMDensity")] #subset out intergenic
+genes <- APR.data[which(APR.data$GeneOrControlDesignation == "CodingGene"),c("EnsemblGeneUID","PS21_GeneFamilyNumber","PS21_GeneFamilyPhylostratum", "ELMSLiMDensity")] #subset out genes
+intergenic <- APR.data[which(APR.data$GeneOrControlDesignation == "IntergenicNucleotideSeqControl"),c("EnsemblGeneUID","PS21_GeneFamilyNumber","PS21_GeneFamilyPhylostratum","ELMSLiMDensity")] #subset out intergenic
+masked <- APR.data[which(APR.data$GeneOrControlDesignation == "MaskedIntergenicNucleotideSeqControl"),c("EnsemblGeneUID","PS21_GeneFamilyNumber","PS21_GeneFamilyPhylostratum","ELMSLiMDensity")] #subset out intergenic
 remove(APR.data) #clear large data frame with unnecessary information
 ```
 
 Factorize categorical variables before linear model construction
 ```{r}
-genes$GeneFamilyNumber <- as.factor(genes$GeneFamilyNumber) #factorize gene family identifier to prevent numeric interpretation
-genes$GeneFamilyPhylostratum <- as.factor(genes$GeneFamilyPhylostratum) #factorize PS to prevent numeric interpretation in fit
-genes$GeneFamilyPhylostratum <- with(genes, factor(GeneFamilyPhylostratum, levels = c(sort(unique(genes$GeneFamilyPhylostratum))))) # set levels of categorical phylostratum variable
+genes$PS21_GeneFamilyNumber <- as.factor(genes$PS21_GeneFamilyNumber) #factorize gene family identifier to prevent numeric interpretation
+genes$PS21_GeneFamilyPhylostratum <- as.factor(genes$PS21_GeneFamilyPhylostratum) #factorize PS to prevent numeric interpretation in fit
+genes$PS21_GeneFamilyPhylostratum <- with(genes, factor(PS21_GeneFamilyPhylostratum, levels = c(sort(unique(genes$PS21_GeneFamilyPhylostratum))))) # set levels of categorical phylostratum variable
 
 ```
 
@@ -58,9 +63,9 @@ Generate family of linear models for each phylostratum to give mean SLiM density
 ```{r}
 library(nlme)
 
-fit.SLiMDensity.genes.standard <- lm(ELMSLiMDensity ~ GeneFamilyPhylostratum, data = genes)
+fit.SLiMDensity.genes.standard <- lm(ELMSLiMDensity ~ PS21_GeneFamilyPhylostratum, data = genes)
 AIC(fit.SLiMDensity.genes.standard) #fit a standard linear model for comparison, print AIC
-fit.SLiMDensity.genes <- lme(ELMSLiMDensity ~ GeneFamilyPhylostratum , random = ~ 1|GeneFamilyNumber, data = genes)
+fit.SLiMDensity.genes <- lme(ELMSLiMDensity ~ PS21_GeneFamilyPhylostratum , random = ~ 1|PS21_GeneFamilyNumber, data = genes)
 summary(fit.SLiMDensity.genes) #fit a mixed-effects model with gene family as a random effect term
 
 fit.SLiMDensity.intergenic <- lm(ELMSLiMDensity ~ 1, data = intergenic)
@@ -118,13 +123,18 @@ colPink <- colorblindPalette[8]
 
 interval.times <- read.table("split_interval_times.txt")
 axis.breaks <- -log10(interval.times$V1)
-axis.breaks <- c(axis.breaks,-7.8,-7.75) #add extra points for controls
+#axis.breaks <- c(axis.breaks,-7.8,-7.75) #add extra points for controls
+
+log.scale <- c(axis.breaks,-6.9,-6.85)
+label.vector <- c("Cellular org.","Eukaryota","Opisthokonta","Holozoa","Metazoa","","","","","","Vertebrata","Euteleostomi","Tetrapoda","Amniota","Mammalia","Eutheria","Boreoeutheria\n","Euarchontoglires","Rodentia","Mus","Intergenic","Masked")
+split.times <- as.character(round(interval.times$V1/1000000.0))
+
 
 plot.SLiMDensity <- ggplot(combined.data.frame, aes(colour = Model, fill = Model, shape = Model)) #create ggplot object
 plot.SLiMDensity <- plot.SLiMDensity + 
-  geom_pointrange(aes(x = axis.breaks, y = Intercept, ymin = Intercept - SE, ymax =Intercept + SE), size = 0.5, lwd = 1,   show.legend=FALSE) + #add points
-  scale_x_continuous(labels=c("Cellular org.","Eukaryota","Opisthokonta","Holozoa","Metazoa","","","","","","Vertebrata","Euteleostomi","Tetrapoda","Amniota","Mammalia","Eutheria","Boreoeutheria","\nEuarchontoglires","Rodentia","Intergenic","Repeat-masked"), breaks = axis.breaks) + #change x-axis names of phylostrata to taxonomic split names
-  geom_vline(xintercept = -7.85, color = "darkgrey", linetype = 2) +
+  geom_pointrange(aes(x = log.scale, y = Intercept, ymin = Intercept - SE, ymax =Intercept + SE), size = 0.5, lwd = 1,   show.legend=FALSE) + #add points
+  scale_x_continuous(labels=label.vector, breaks = log.scale) + #change x-axis names of phylostrata to taxonomic split names
+  geom_vline(xintercept = -7, color = "darkgrey", linetype = 2) +
   scale_colour_manual(name = "", values = c(colBlack,colDarkBlue,colSkyBlue)) + #manually scale line colors
   scale_fill_manual(name = "", values = c(colBlack,colDarkBlue,colSkyBlue)) + #manually scale fill colors
   scale_shape_manual(name = "", values = c(21,23,24)) + #manually set hollow shapes
@@ -135,7 +145,7 @@ plot.SLiMDensity <- plot.SLiMDensity +
         axis.text.y = element_text(size=10),
         axis.title.y = element_text(size=11),
         axis.ticks = element_blank(),
-        axis.text.x=element_text(angle = 90, size=c(rep(9,7),8,rep(9,13)), hjust = 1, vjust = 0.5, colour=c(rep("black",7),"lightslategrey",rep("black",11),colDarkBlue,colSkyBlue)),
+        axis.text.x=element_text(angle = 90, size=c(rep(9,7),8,rep(9,14)), hjust = 1, vjust = 0.5, colour=c(rep("black",7),"lightslategrey",rep("black",12),colDarkBlue,colSkyBlue)),
         legend.title = element_text(size=11),
         legend.text = element_text(size=8),
         legend.background = element_rect(fill="transparent"),
@@ -145,7 +155,8 @@ plot.SLiMDensity <- plot.SLiMDensity +
 
 plot.SLiMDensity
 
-pdf(file = "SLiMDensityGenesIntergenicMasked.pdf", width =6.7, height = 3) #output plot object to pdf
+
+tiff(file = "SLiMs_Intergenic_Masked.tif", width =20, height = 10, units = "cm", res = 300) #output plot object to tif
 plot.SLiMDensity
 dev.off()
 
